2010-07-01	Vinu Rajashekhar <vinutheraj@gmail.com>

	PR 1597/cpukit
	* psx13/psx13.scn, psx13/test.c, psxstat/psxstat.scn,
	psxstat/test.c: Add lchown() and utimes().

2010-07-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add tests for file lock stubs as well as
	various POSIX methods that access UID, PID, and GID.
	* psxfilelock01/.cvsignore, psxfilelock01/Makefile.am,
	psxfilelock01/init.c, psxfilelock01/psxfilelock01.doc,
	psxfilelock01/psxfilelock01.scn, psxid01/.cvsignore,
	psxid01/Makefile.am, psxid01/init.c, psxid01/psxid01.doc,
	psxid01/psxid01.scn: New files.

2010-06-30	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* psximfs01/init.c: Fix warning introduced.

2010-06-30	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1595/tests
	* psximfs01/init.c: Fix warnings.

2010-06-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxtime/psxtime.scn, psxtime/test.c: Add test for passing a null
	pointer.

2010-06-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Remove reference to RTEMS_OBJECT_FORMAT.

2010-06-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add test to exercise IMFS behaviour with
	files of maximum sizes.
	* psximfs01/.cvsignore, psximfs01/Makefile.am, psximfs01/init.c,
	psximfs01/psximfs01.doc, psximfs01/psximfs01.scn: New files.

2010-06-23	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* Makefile.am, configure.ac: Revert accidentally committed patch.

2010-06-23	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* psx01/Makefile.am, psx02/Makefile.am, psx03/Makefile.am,
	psx04/Makefile.am, psx05/Makefile.am, psx06/Makefile.am,
	psx07/Makefile.am, psx08/Makefile.am, psx09/Makefile.am,
	psx10/Makefile.am, psx11/Makefile.am, psx12/Makefile.am,
	psx13/Makefile.am, psx14/Makefile.am, psxalarm01/Makefile.am,
	psxautoinit01/Makefile.am, psxautoinit02/Makefile.am,
	psxbarrier01/Makefile.am, psxcancel/Makefile.am,
	psxcancel01/Makefile.am, psxchroot01/Makefile.am,