@@ -105,6 +105,7 @@ psxmsgq04/Makefile
 psxmutexattr01/Makefile
 psxobj01/Makefile
 psxpasswd01/Makefile
+psxpasswd02/Makefile
 psxreaddir/Makefile
 psxrdwrv/Makefile
 psxrwlock01/Makefile
